connecting view and controllers

--- a/Supermarket-mvc/Views/Categories/Categories.cshtml
+++ b/Supermarket-mvc/Views/Categories/Categories.cshtml
@@ -1,11 +1,11 @@
 <html>
     <body>
-        <h1>
+        <h3>
             Categories
             <br/>
-        </h1>
+        </h3>
         <p>
-            We are going to display categores here...
+            We are going to display categories here...
         </p>
     </body>
 </html>
