--- a/Supermarket-mvc/Views/Home/Index.cshtml
+++ b/Supermarket-mvc/Views/Home/Index.cshtml
@@ -1,5 +1,9 @@
-<html>
-    <body>
+@{
+    Layout = "_Layout";
+}
+
+@* <html>
+    <body> *@
         <h1>
             welcome to home page
             <br/>
@@ -7,5 +11,5 @@
         <p>
             this is our new home
         </p>
-    </body>
-</html>
+    @* </body>
+</html> *@
