--- a/Supermarket-mvc/Views/Shared/_Layout.cshtml
+++ b/Supermarket-mvc/Views/Shared/_Layout.cshtml
@@ -3,9 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login | Klorofil - Free Bootstrap Dashboard Template</title>
+    <title>Supermarket Management</title>
   </head>
   <body>
-    <div></div>
+    <div>
+      @RenderBody()
+    </div>
   </body>
 </html>
