--- a/Supermarket-mvc/Views/Categories/Index.cshtml
+++ b/Supermarket-mvc/Views/Categories/Index.cshtml
@@ -1,5 +1,9 @@
+@{
+    Layout = "_Layout";
+}
+@* 
 <html>
-    <body>
+    <body> *@
         <h3>
             Categories
         </h3>
@@ -12,5 +16,5 @@
                 <a href="/categories/edit/2">Meat</a>
             </li>
             </ul>
-    </body>
-</html>
+    @* </body>
+</html> *@
