--- a/Supermarket-mvc/Views/Categories/Edit.cshtml
+++ b/Supermarket-mvc/Views/Categories/Edit.cshtml
@@ -1,8 +1,11 @@
 @using supermarket_mvc.Models
 @model Category
+@{
+    Layout = "_Layout";
+}
 
-<html>
-    <body>
+@* <html>
+    <body> *@
         <h3>Category: @Model.CategoryId</h3>
-    </body>
-</html>
+    @* </body>
+</html> *@
