--- a/Supermarket-mvc/Views/Categories/Index.cshtml
+++ b/Supermarket-mvc/Views/Categories/Index.cshtml
@@ -1,9 +1,6 @@
-@{
-    Layout = "_Layout";
-}
-@* 
-<html>
-    <body> *@
+
+@* <html>
+    <body>  *@
         <h3>
             Categories
         </h3>
