--- a/Supermarket-mvc/Views/Shared/_Layout.cshtml
+++ b/Supermarket-mvc/Views/Shared/_Layout.cshtml
@@ -3,10 +3,32 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="~/lib/bootstrap/css/bootstrap.css"/>
     <title>Supermarket Management</title>
   </head>
   <body>
-    <div>
+    <header>
+      <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <div class="container-fluid">
+          <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">SuperMarket</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="main"
+          aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+            <ul>
+              <li class="nav-item">
+                <a class="nav-link text-dark" href="/home/index">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-dark" href="/categories/index">Categories</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <div class="container">
       @RenderBody()
     </div>
   </body>
