went back to solve categories page problem

--- a/Supermarket-mvc/Views/Categories/Edit.cshtml
+++ b/Supermarket-mvc/Views/Categories/Edit.cshtml
@@ -1,8 +1,13 @@
 @using supermarket_mvc.Models
 @model Category
-@{
-    Layout = "_Layout";
-}
+@* @{
+Layout = "_Layout";
+} *@
 
+<html>
 
-<h3>Category: @Model.CategoryId</h3>
+<body>
+    <h3>Category: @Model.CategoryId</h3>
+</body>
+
+</html>
