--- a/Supermarket-mvc/Views/Home/Index.cshtml
+++ b/Supermarket-mvc/Views/Home/Index.cshtml
@@ -1,7 +1,13 @@
-<h1>
+<html>
+    <body>
+        <h1>
     Welcome to home page
     <br />
 </h1>
 <p>
     this is our new home
 </p>
+    </body>
+</html>
+
+
