--- a/Supermarket-mvc/Views/Categories/Index.cshtml
+++ b/Supermarket-mvc/Views/Categories/Index.cshtml
@@ -1,13 +1,14 @@
-
-< h3 >
-    Categories
-</ h3 >
-< br />
-< ul >
-    < li >
-        < a href = "/categories/edit/1" > Beverages </ a >
-    </ li >
-    < li >
-        < a href = "/categories/edit/2" > Meat </ a >
-        </ li >
-</ ul >
+<html>
+    <body>
+        <h3>Categories</h3>
+        <br/>
+        <ul>
+            <li>
+                <a href="/categories/edit/1">Beverages</a>
+            </li>
+            <li>
+                <a href="/categories/edit/2">Meat</a>
+            </li>
+        </ul>
+    </body>
+</html>
