--- a/Supermarket-mvc/Views/Shared/_Layout.cshtml
+++ b/Supermarket-mvc/Views/Shared/_Layout.cshtml
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="~/lib/bootstrap/css/bootstrap.css"/>
+    @* <link rel="stylesheet" href="~/lib/bootstrap/css/bootstrap.css"/> *@
     <title>Supermarket Management</title>
   </head>
   <body>
-    <header>
+    @* <header>
       <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
         <div class="container-fluid">
           <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">SuperMarket</a>
@@ -27,9 +27,9 @@
           </div>
         </div>
       </nav>
-    </header>
+    </header> *@
     <div class="container">
-      @RenderBody()
+     
     </div>
   </body>
 </html>
