everything is rendered properly

--- a/Supermarket-mvc/Views/Home/Index.cshtml
+++ b/Supermarket-mvc/Views/Home/Index.cshtml
@@ -1,13 +1,7 @@
-<html>
-    <body>
-        <h1>
+<h1>
     Welcome to home page
     <br />
 </h1>
 <p>
-    this is our new home
+    This is our new home
 </p>
-    </body>
-</html>
-
-
