--- a/Supermarket-mvc/Views/Categories/Edit.cshtml
+++ b/Supermarket-mvc/Views/Categories/Edit.cshtml
@@ -1,6 +1,9 @@
 @using supermarket_mvc.Models
 @model Category
 
+@section title {
+    <h3>Category: @Model.CategoryId</h3>
+}
 
-<h3>Category: @Model.CategoryId</h3>
+
 
