--- a/Supermarket-mvc/Views/Home/Index.cshtml
+++ b/Supermarket-mvc/Views/Home/Index.cshtml
@@ -1,7 +1,9 @@
-<h1>
-    Welcome to home page
-    <br />
-</h1>
+@section title {
+    <h1>
+        Welcome to home page
+    </h1>
+}
+
 <p>
     This is our new home
 </p>
