--- a/Supermarket-mvc/Views/Categories/Index.cshtml
+++ b/Supermarket-mvc/Views/Categories/Index.cshtml
@@ -1,13 +1,14 @@
+@using supermarket_mvc.Models;
+@model List<Category>
+
 @section title {
     <h3>Categories</h3>
 }
-
-
 <ul>
-    <li>
-        <a href="/categories/edit/1">Beverages</a>
-    </li>
-    <li>
-        <a href="/categories/edit/2">Meat</a>
-    </li>
+    @foreach(var category in Model)
+    {
+        <li>
+            @category.Name
+        </li>
+    }
 </ul>
