minor bugs fixed

--- a/Supermarket-mvc/Views/Categories/Index.cshtml
+++ b/Supermarket-mvc/Views/Categories/Index.cshtml
@@ -1,14 +1,14 @@
 @using supermarket_mvc.Models;
 @model List<Category>
 
-@* @section title {
+@section title {
     <h3>Categories</h3>
-} *@
+}
 <ul>
-    @* @foreach(var category in Model)
+    @foreach(var category in Model)
     {
         <li>
             @category.Name
         </li>
-    } *@
+    }
 </ul>
