--- a/Supermarket-mvc/Views/Categories/Edit.cshtml
+++ b/Supermarket-mvc/Views/Categories/Edit.cshtml
@@ -1,8 +1,41 @@
 @model Category
 
 @section title {
-    <h3>Category: @Model.CategoryId</h3>
+    @if (Model != null){
+        <h3>Category: @Model.Name</h3>;
+    } else{
+        <h3>No items found</h3>
+    }   
 }
+
+<form method="post" asp-controller="categories" asp-action="edtt">
+    <div class="row mb-3">
+        <div class="col-2">
+            <label asp-for="Name" class="col-form-label"></label>
+        </div>
+        <div class="col-6">
+            <input type="text" asp-for="Name" class="form-control"/>
+        </div>
+    </div>
+
+    <div class="row mb-3">
+        <div class="col-2">
+            <label asp-for="Description" class="col-form-label"></label>
+        </div>
+        <div class="col-6">
+            <input type="text" asp-for="Description" class="form-control"/>
+        </div>
+
+         <div class="row mb-3">
+        <div class="col-2">
+            <input type="submit" class="btn btn-primary" value="save"/>
+        </div>
+        <div class="col-6">
+            
+        </div>
+    </div>
+    </div>
+</form>
 
 
 
