--- a/Supermarket-mvc/Views/Categories/Edit.cshtml
+++ b/Supermarket-mvc/Views/Categories/Edit.cshtml
@@ -1,20 +1,28 @@
 @model Category
 
 @section title {
-    @if (Model != null){
-        <h3>Category: @Model.Name</h3>;
-    } else{
+    @if (Model != null)
+    {
+        <h3>Category: @Model.Name</h3>
+    }
+    else
+    {
         <h3>No items found</h3>
-    }   
+    }
 }
 
-<form method="post" asp-controller="categories" asp-action="edtt">
+<form method="post" asp-controller="categories" asp-action="edit">
+    <input type="hidden" asp-for="CategoryId"/>
+    <div class="text-danger" asp-validation-summary="All"></div>
     <div class="row mb-3">
         <div class="col-2">
             <label asp-for="Name" class="col-form-label"></label>
         </div>
         <div class="col-6">
-            <input type="text" asp-for="Name" class="form-control"/>
+            <input type="text" asp-for="Name" class="form-control" />
+        </div>
+        <div class="col">
+            <span class="text-danger" asp-validation-for="Name"></span>
         </div>
     </div>
 
@@ -23,19 +31,16 @@
             <label asp-for="Description" class="col-form-label"></label>
         </div>
         <div class="col-6">
-            <input type="text" asp-for="Description" class="form-control"/>
+            <input type="text" asp-for="Description" class="form-control" />
         </div>
 
-         <div class="row mb-3">
-        <div class="col-2">
-            <input type="submit" class="btn btn-primary" value="save"/>
+        <div class="row mb-3">
+            <div class="col-2">
+                <input type="submit" class="btn btn-primary" value="save" />
+            </div>
+            <div class="col-6">
+
+            </div>
         </div>
-        <div class="col-6">
-            
-        </div>
-    </div>
     </div>
 </form>
-
-
-
