--- a/Supermarket-mvc/Views/Categories/Index.cshtml
+++ b/Supermarket-mvc/Views/Categories/Index.cshtml
@@ -1,7 +1,7 @@
 @model List<Category>
 
 @section title {
-    <h3>Categories</h3>
+    <h3>Manage Categories</h3>
 }
 
 @if (Model != null && Model.Count() > 0)
@@ -21,6 +21,7 @@
                     <td>@category.Name</td>
                     <td>@category.Description</td>
                     <td><a class="btn btn-link" asp-controller="categories" asp-action="edit" asp-route-id="@category.CategoryId">Edit</a></td>
+                    <td><a class="btn btn-link" asp-controller="categories" asp-action="delete" asp-route-id="@category.CategoryId">Delete</a></td>
                 </tr>
                 }
         </tbody>
