--- a/Supermarket-mvc/Views/Categories/Index.cshtml
+++ b/Supermarket-mvc/Views/Categories/Index.cshtml
@@ -27,3 +27,7 @@
         </tbody>
     </table>
 }
+
+<div class="col-2">
+                <input type="submit" class="btn btn-primary" value="Add" />
+            </div>
