--- a/Supermarket-mvc/Views/Categories/Index.cshtml
+++ b/Supermarket-mvc/Views/Categories/Index.cshtml
@@ -15,19 +15,21 @@
             </tr>
         </thead>
         <tbody>
-            @foreach(var category in Model)
+            @foreach (var category in Model)
             {
                 <tr>
                     <td>@category.Name</td>
                     <td>@category.Description</td>
-                    <td><a class="btn btn-link" asp-controller="categories" asp-action="edit" asp-route-id="@category.CategoryId">Edit</a></td>
-                    <td><a class="btn btn-link" asp-controller="categories" asp-action="delete" asp-route-id="@category.CategoryId">Delete</a></td>
+                    <td><a class="btn btn-link" asp-controller="categories" asp-action="edit"
+                            asp-route-id="@category.CategoryId">Edit</a></td>
+                    <td><a class="btn btn-link" asp-controller="categories" asp-action="delete"
+                            asp-route-id="@category.CategoryId">Delete</a></td>
                 </tr>
-                }
+            }
         </tbody>
     </table>
 }
 
 <div class="col-2">
-                <input type="submit" class="btn btn-primary" value="Add" />
-            </div>
+    <input type="submit" class="btn btn-primary" value="Add" />
+</div>
