--- a/Supermarket-mvc/Views/Shared/_Layout.cshtml
+++ b/Supermarket-mvc/Views/Shared/_Layout.cshtml
@@ -21,7 +21,19 @@
                 <a class="nav-link text-dark" asp-controller="home" asp-action="index" >Home</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link text-dark" asp-controller="sell" asp-action="index" >Sell</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link text-dark" asp-controller="categories" asp-action="index" >Categories</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-dark" asp-controller="products" asp-action="index" >Products</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-dark" asp-controller="transactions" asp-action="index" >Transactions</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-dark" asp-controller="privacy" asp-action="index" >Privacy</a>
               </li>
             </ul>
           </div>
