Add view and controller created

--- a/Supermarket-mvc/Views/Categories/Index.cshtml
+++ b/Supermarket-mvc/Views/Categories/Index.cshtml
@@ -28,8 +28,7 @@
             }
         </tbody>
     </table>
+    <br/>
+    <a class="btn btn-primary" asp-controller="categories" asp-action="add" asp-route="">Add</a>
 }
 
-<div class="col-2">
-    <input type="submit" class="btn btn-primary" value="Add" />
-</div>
