--- a/Supermarket-mvc/Views/Categories/Add.cshtml
+++ b/Supermarket-mvc/Views/Categories/Add.cshtml
@@ -4,7 +4,7 @@
     <h3>Add Category</h3>
 }
 
-<form method="post" asp-controller="categories" asp-action="add">
+@* <form method="post" asp-controller="categories" asp-action="add">
     <div class="text-danger" asp-validation-summary="All"></div>
     <div class="row mb-3">
         <div class="col-2">
@@ -26,7 +26,6 @@
             <input type="text" asp-for="Description" class="form-control" />
         </div>
 
-        
         <div class="row mb-3">
             <div class="col-2">
                 <input type="submit" class="btn btn-primary" value="Add" />
@@ -35,4 +34,6 @@
             </div>
         </div>
     </div>
-</form>
+</form> *@
+
+<partial name="_Category" model="@Model"/>
