--- a/Supermarket-mvc/Views/Categories/_Category.cshtml
+++ b/Supermarket-mvc/Views/Categories/_Category.cshtml
@@ -1,20 +1,13 @@
 @model Category
-
-@section title {
-    @if (Model != null)
-    {
-        <h3>Category: @Model.Name</h3>
-    }
-    else
-    {
-        <h3>No items found</h3>
-    }
+@{
+    string action = ViewBag.Action??string.Empty;
 }
 
-@if (Model != null)
-{
-    @* <form method="post" asp-controller="categories" asp-action="edit">
+<form method="post" asp-controller="categories" asp-action="@action">
+    @if (action?.ToLower() == "edit")
+    {
         <input type="hidden" asp-for="CategoryId" />
+    }
         <div class="text-danger" asp-validation-summary="All"></div>
         <div class="row mb-3">
             <div class="col-2">
@@ -45,7 +38,4 @@
                 </div>
             </div>
         </div>
-    </form> *@
-    <partial name="_Category" model="@Model"/>
-
-}
+    </form>
